--- a/front/Index.css
+++ b/front/Index.css
@@ -5,7 +5,12 @@ body{
 }
 
 header{
+    padding-left: 15px;
+    padding-right: 15px;
     font-family: Arial, Helvetica, sans-serif;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     text-align: center;
     background-color: whitesmoke;
     border-bottom: 2px solid rgb(114, 114, 114);
@@ -21,6 +26,16 @@ footer{
     display: flex;
     justify-content: space-around;
     margin: 0%;
+}
+
+img{
+    height: 30px;
+    width: 30px;
+}
+
+a{
+    color: rgb(27, 27, 27);
+    text-decoration: none;
 }
 
 
@@ -84,8 +99,41 @@ Aqui enpieza el css de crear tareas
     border-bottom: 2px solid rgb(114, 114, 114);
 }
 
+.formulario{
+    margin-top: 50px;
+    margin-bottom: 50px;
+}
+
 form{
     display: flex;
     justify-content: flex-start;
+    flex-direction: column;
+    flex-wrap: wrap;
     justify-content: space-around;
+    border: 2px solid red;
+    height: 200px;
+}
+
+.sectores{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin-left: 10px;
+    margin-right: 10px;
+    border: 2px solid red;
+}
+
+
+.checkbox{
+    max-width: 15px;
+    margin-left: 0px;
+    margin-bottom: 20px;
+}
+
+.subir{
+    display: flex;
+    align-items: center;
+    height: 60px;
+    border: 2px solid red;
+    padding-left: 20px;
 }
